--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Papa's Pizza</title>
-    <!-- link to javascript -->
-    <script src = "/js/pizza.js" defer></script>
+
+    <!-- Link to JavaScript -->
+    <script src="js/pizza.js" defer></script>
+    <script src="//code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="//cdn.datatables.net/2.3.4/js/dataTables.min.js"></script>
 
     <!-- Favicon -->
     <link rel="icon" href="images/pizza-icon.jpg">
 
     <!-- Stylesheet -->
+    <link rel="stylesheet" href="//cdn.datatables.net/2.3.4/css/dataTables.dataTables.min.css">
     <link rel="stylesheet" href="styles/pizza-styles.css">
 </head>
 <body>
@@ -22,10 +26,39 @@
             <hr>
             <p>Poppa’s Pizza serves up fresh, handcrafted pizzas with 
                 bold flavors and a warm, family-friendly vibe.</p>
-            <a id="contact-button" href="#" role="button">Contact Us</a>
         </header>
-        <h1> Contact Us</h1>
-        
+        <h1>Admin Page</h1>
+        <table id="order-table" class="display">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Toppings</th>
+                    <th>Size</th>
+                    <th>Comment</th>
+                    <th>Date/Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% orders.forEach(order => { %>
+
+                <tr>
+                    <td><%= order.fname %> <%= order.lname %></td>
+                    <td><%= order.email %></td>
+                    <td><%= order.toppings %></td>
+                    <td><%= order.size %></td>
+                    <td><%= order.comment %></td>
+                    <td><%= order.timestamp %></td>
+                </tr>
+
+                <% }); %>
+
+            </tbody>
+        </table>
     <main>
+    <script defer>
+        let table = new DataTable('#order-table');
+    </script>
+
 </body>
 </html>
