--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Papa's Pizza</title>
-    <!-- link to javascript -->
-    <script src = "/js/pizza.js" defer></script>
+
+    <!-- Link to JavaScript -->
+    <script src="js/pizza.js" defer></script>
 
     <!-- Favicon -->
     <link rel="icon" href="images/pizza-icon.jpg">
@@ -22,10 +23,9 @@
             <hr>
             <p>Poppa’s Pizza serves up fresh, handcrafted pizzas with 
                 bold flavors and a warm, family-friendly vibe.</p>
-            <a id="contact-button" href="#" role="button">Contact Us</a>
         </header>
-        <h1> Contact Us</h1>
-        <a href = "/">Place an order</a>
+        <h1>Contact Us</h1>
+        <a href="/">Place an order</a>
     <main>
 </body>
 </html>
