--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Papa's Pizza</title>
-    <!-- link to javascript -->
-    <script src = "/js/pizza.js" defer></script>
+
+    <!-- Link to JavaScript -->
+    <script src="js/pizza.js" defer></script>
 
     <!-- Favicon -->
     <link rel="icon" href="images/pizza-icon.jpg">
@@ -29,20 +30,22 @@
             <!-- Contact Info -->
             <fieldset>
                 <legend>Contact Info</legend>
-                <span id="err-fname" class="error"> First Name cannot be empty!</span>
                 <label for="fname">First Name:</label>
                 <input type="text" id="fname" name="fname">
-                <span id="err-lname" class="error"> Last Name cannot be empty!</span>
+                <span id="err-fname" class="error">First name cannot be empty!</span>
+
                 <label for="lname">Last Name:</label>
                 <input type="text" id="lname" name="lname">
-                <span id="err-email" class="error">Email cannot be empty!</span>
+                <span id="err-lname" class="error">Last name cannot be empty!</span>
+
                 <label for="email">Email:</label>
                 <input type="text" id="email" name="email">
-             </fieldset>
+                <span id="err-email" class="error">Email cannot be empty Or missing a @ or a .</span>
+
+            </fieldset>
 
             <!-- Pickup or Delivery -->
             <fieldset>
-                <span id="err-method" class="error"> Last Name cannot be empty!</span>
                 <legend>Select Pickup or Delivery</legend>
                 <label for="pickup">
                     <input type="radio" id="pickup" name="method"
@@ -52,6 +55,8 @@
                     <input type="radio" id="delivery" name="method"
                            value="delivery">Delivery
                 </label>
+                <span id="err-method" class="error">Please select pickup or delivery</span>
+
             </fieldset>
 
             <!-- Toppings -->
@@ -69,7 +74,6 @@
 
             <!-- Pizza Size -->
             <fieldset>
-                <span id="err-size" class="error">Please select a size</span>
                 <legend>Pizza Size</legend>
                 <select id="size" name="size">
                     <option value="none">-- Select a Size --</option>
@@ -77,6 +81,8 @@
                     <option value="medium">Medium</option>
                     <option value="large">Large</option>
                 </select>
+                <span id="err-size" class="error">Please select a size</span>
+
             </fieldset>
 
             <!-- Comment field -->
